backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitcloser-api-service
spec:
  selector:
    app: gitcloser-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
