backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitcloser-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - gitcloserapi.hayasaka.moe
    secretName: gitcloser-api-tls-secret
  rules:
  - host: "gitcloserapi.hayasaka.moe"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitcloser-api-service
            port:
              number: 80
